--- a/src/main/resources/usertrack.properties
+++ b/src/main/resources/usertrack.properties
@@ -4,7 +4,7 @@ spark.local = true
 ## Connection RDBMS
 jdbc.driver = com.mysql.jdbc.Driver
 jdbc.datasource.size = 10
-jdbc.url = jdbc:mysql://localhost:3306/usertrack
+jdbc.url = jdbc:mysql://hadoop1:3306/usertrack
 jdbc.user = root
 jdbc.password = root
 
