--- a/src/main/resources/usertrack.properties
+++ b/src/main/resources/usertrack.properties
@@ -9,14 +9,14 @@ jdbc.user = root
 jdbc.password = root
 
 ## SPARK SQL TEST
-spark.sql.jdbc.url = jdbc:mysql://bigdata-spark01.ibeifeng.com:3306/meituan_usertrack?user=root&password=123456
+spark.sql.jdbc.url = jdbc:mysql://hadoop1:3306/usertrack?user=root&password=root
 ## SPARK SQL PRODUCT
-spark.sql.jdbc.url.prod = jdbc:mysql://bigdata-spark01.ibeifeng.com:3306/meituan_usertrack?user=root&password=123456
+spark.sql.jdbc.url.prod = jdbc:mysql://hadoop1:3306/usertrack?user=root&password=root
 
 
 ## Kafka Cluster
-metadata.broker.list=192.168.187.146:9092,192.168.187.146:9093,192.168.187.146:9094,192.168.187.146:9095
-kafka.topics=AdRealTimeLogSparkProject:1
-zookeeper.connect.url=192.168.187.146:2181/kafka
+metadata.broker.list=hadoop1:9092,hadoop1:9093,hadoop1:9094
+kafka.topics=yxdkafka0:1
+zookeeper.connect.url=hadoop1:2181/kafka
 
 
